Added content to projects page. Updated nav bar with internal links

--- a/aipaper.html
+++ b/aipaper.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Resume - Marcus Roldan</title>
+    <title>Chord Recognition and Progression Predictor - Marcus Roldan</title>
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
@@ -17,9 +17,9 @@
             <a href="https://github.com/marcusaroldan/" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/marcusaroldan/" target="_blank">LinkedIn</a>
     </nav>
-    <div class="pdf-frame" id="resume-pdf">
+    <div class="pdf-frame" id="ai-pdf">
         <object class="pdf" 
-                data="media/resume.pdf">
+                data="media/AIPaper2024.pdf">
         </object>
     </div>
 </body>
