--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body>
     <nav>
-        <a href="#">About me</a>
-        <a href="#">Projects</a>
-        <a href="#">Resume</a>
-        <a href="#">GitHub</a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="https://github.com/marcusaroldan/" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/marcusaroldan/" target="_blank">LinkedIn</a>
     </nav>
 
     <h1>About me:</h1>
