--- a/nlpreport.html
+++ b/nlpreport.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Resume - Marcus Roldan</title>
+    <title>311 Report Classification - Marcus Roldan</title>
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
@@ -19,7 +19,7 @@
     </nav>
     <div class="pdf-frame" id="resume-pdf">
         <object class="pdf" 
-                data="media/resume.pdf">
+                data="media/nlpreport.pdf">
         </object>
     </div>
 </body>
