--- a/aipaper.html
+++ b/aipaper.html
@@ -7,15 +7,20 @@
     <script src="script.js"></script>
 
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="https://github.com/marcusaroldan/" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/marcusaroldan/" target="_blank">LinkedIn</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="https://github.com/marcusaroldan/" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/marcusaroldan/" target="_blank">LinkedIn</a></li>
+        </ul>
     </nav>
     <div class="pdf-frame" id="ai-pdf">
         <object class="pdf" 
