Added more content to home (personal introduction)

--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
         </ul>
     </nav>
 
-    <h1>About me:</h1>
-    <p>My name is Marcus Roldan, and I am a 21-year-old, fifth-year Computer Science student at Northeastern University with a concentration in Artificial Intelligence.</p>
-    <p>I've also been learning Spanish for many years now and (finally) have acheived a high degree of proficiency in the language, having completed a minor in Spanish Language and Culture. It makes me very happy to be able to talk with many of my relatives who only speak Spanish, a life-long goal of mine. </p>
-    <p>About two years ago I became fascinated by urban transit and last summer I got the amazing opportunity to travel to the Netherlands on Dialogue to learn about their amazing transportation and urban planning philosophy. I wish to combine my expertise in Computer Science with my passion for transportation, and have been working on projects that combine the two fields.</p>
+    <div class="project-section" id="personal-intro">
+        <h2>Welcome!</h2>
+        <p>My name is Marcus Roldan, and I am a 21-year-old, fifth-year Computer Science student at Northeastern University with a concentration in Artificial Intelligence.</p>
+        <p>Throughout my time at Northeastern I have had the pleasure of learning and experiencing so many aspects of technology, Computer Science, Software Development, Data Science, and many more interesting topics.</p>
+        <p>While on my first co-op as a Software Engineer at Wishroute, Inc., on top of gaining highly-valuable technical experience and knowledge, I realized the personal importance of having a tangible, positive impact through my work.</p>
+        <p>Around the same time, I began to become more fascinated with transportation systems, the built-environment, and the impact they have on our lives. As I followed this new-found passion, I joined the Transportation Engineering club at Northeastern to learn more about the subject through bi-weekly talks from people in the field. Sustainable transportation and urban development became one of my favorite areas, and I was extremely lucky to participate in a study-abroad program through Northeastern about this very subject. </p>
+        <p>Throughout the five weeks I spent in the Netherlands during this program, I learned about and expereinced (by bike, train, and bus, of course!) the infrastructure, design principles, and most importantly, the way of life that is fostered through a multi-modal, low-carbon, and sustainable policy implementations. </p>
+        <p>Ever since this study abroad, I have been striving to leverage my Computer Science skills and experience through various projects dealing with transportaion systems and active-transport infrastructure. Post graduation, I am keen to pursue a role which utilizes technology, Computer and Data Science, and Software Development to aid in the improvement of our transportation systems and built-environment.</p>
+        <p>Most recently, I have been working on a project alongside the Boston Cyclist Union's (<a href="https://bostoncyclistsunion.org/" target="_blank">BCU</a>) volunteer data science team, <a href="https://bostoncyclistsunion.org/bcu-labs" target="_blank">BCU Labs</a>. The project uses reports of Illegal Parking from Boston 311 to identify instances where active-transportation infrastructure is impacted, aiming to visualize the areas of the transportation system that need the most improvement. More information about the project can be found <a href="projects.html">here</a></p>
+        <p>Please feel free to browse this portfolio and of course reach out if there are any questions.</p>
+    </div>
+
+    <div class="project-section" id="contact-info">
+    </div>
 </body>
