fixing css issues

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
-    <script src="script.js"></script>
-
     <link href="style.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +24,7 @@
         </ul>
     </nav>
 
-    <div class="project-section" id="personal-intro">
+    <div class="section" id="personal-intro">
         <h2>Welcome!</h2>
         <p>My name is Marcus Roldan, and I am a 21-year-old, fifth-year Computer Science student at Northeastern University with a concentration in Artificial Intelligence.</p>
         <p>Throughout my time at Northeastern I have had the pleasure of learning and experiencing so many aspects of technology, Computer Science, Software Development, Data Science, and many more interesting topics.</p>
@@ -38,6 +36,6 @@
         <p>Please feel free to browse this portfolio and of course reach out if there are any questions.</p>
     </div>
 
-    <div class="project-section" id="contact-info">
+    <div class="section" id="contact-info">
     </div>
 </body>
