--- a/projects-interactive.html
+++ b/projects-interactive.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="projects", id="projects-container">
-        <div class="project-section", id="311">
+        <div class="interactive-project-section", id="311">
             <h2>311 Infrastructure Issue Identifier</h2>
             <img class="project-image", id="311-img", src="media/311-preview.PNG", alt="Preview of the 311 Infrastructure Issue Identifier interface.">
             <p class="project-description" id="311-desc">The focus of this project is to utilize the vast amount of publicly accessible data to create a geospatial visualization of where pedestrian, bike, and public transit infrastructure encounters the most issues. This is accomplished by classifying Illegal Parking reports made to <a href="https://311.boston.gov/" target="_blank">Boston 311</a>. The main issue with these Illegal Parking reports is that this category encompasses everything from resident-only parking to blocked bus stops and bike lanes.</p>
@@ -41,7 +41,7 @@
             <a class="project-link", id="311-site" href="https://marcusaroldan.github.io/311-infrastructure-issue-identifier/" target="_blank">Interactive Map</a>
             <a class="project-link", id="311-repo" href="https://github.com/marcusaroldan/311-infrastructure-issue-identifier" target="_blank">GitHub Repository</a>
         </div>
-        <div class="project-section", id="bicre">
+        <div class="interactive-project-section", id="bicre">
             <h2>BICRE: Boston Integrated Cycle Route Engine</h2>
             <img class="project-image", id="bicre-img", src="media/bicre_v1_example.PNG", alt="Preview of the BICREn interface.">
             <p class="project-description", id="bicre-desc">The Boston Integrated Cycling Route Engine was created to address a problem I have encountered with using Google Maps for navigation. A key part of the Dutch transit system that I experienced was its intermodality. Many people used a combination of biking and transit to get them to and from their destinations. This is a great way to improve the utility of existing transit service, as it solves the issue of first and last mile legs of public transit trips. Due to the nature of public transit, it cannot take every user directly to their destination, but is usually combined with walking to achieve this. If all users walk to a transit station, the <a href="https://www.witpress.com/Secure/elibrary/papers/UT08/UT08017FU1.pdf" target="_blank">catchment area</a> is considerably smaller than if users have the ability to utilize cycling.</p>
@@ -49,22 +49,22 @@
             <a class="project-link", id="bicre-site" href="">Try BICRE</a>
             <a class="project-link", id="bicre-repo" href="https://github.com/marcusaroldan/bicre" target="_blank">GitHub Repository</a>
         </div>
-        <div class="project-section", id="mini-section-container">
-            <div class="mini-project-section", id="mbta-analysis">
+        <div class="interactive-project-section", id="mini-section-container">
+            <div class="interactive-mini-project-section", id="mbta-analysis">
                 <h2>MBTA Slow-zones Data Analysis</h2>
                 <img class="project-image", id="mbta-img", src="media/mbta-logo.png", alt="MBTA Logo">
                 <p class="project-description", id="mbta-desc">This data analysis and visualization project focuses on the MBTA’s issues with <a href="https://www.mbta.com/performance-metrics/speed-restrictions" target="_blank">speed restrictions</a> and aims to investigate the impact of slow-zones on system ridership.</p>
                 <a class="project-link", id="mbta-site" href="https://marcusaroldan.github.io/mbta-slow-zones-ridership/" target="_blank">Analysis</a>
                 <a class="project-link", id="mbta-repo" href="https://github.com/marcusaroldan/mbta-slow-zones-ridership" target="_blank">GitHub Repo</a>
             </div>
-            <div class="mini-project-section", id="rove">
+            <div class="interactive-mini-project-section", id="rove">
                 <h2>ROVE: Ridership Operations Visualization Engine</h2>
                 <img class="project-image", id="rove-img">
                 <p class="project-description", id="rove-desc"><a href="https://github.com/jtl-transit/rove" target="_blank">ROVE</a> is a tool developed by the MIT Transit Lab for performance analysis of bus transit systems. It uses General Transit Feed Specification (GTFS) data to create interactive visualizations to support the analysis of the effectiveness of bus transit services. The original paper was sent to me by Jeff Rosenblum while I was abroad in the Netherlands studying Sustainable Urban Development and Transportation. Because of my recent experiences both studying and using Dutch bus systems in The Hague, Amsterdam, and Rotterdam, I wanted to compare the data provided by OV (Openbaar Vervoer, Dutch transit authority) to the example systems provided by ROVE (MTA, MBTA, etc.). However, the OV GTFS data was not compatible with the ROVE system.</p>
                 <p class="project-description" id="rove-desc">I endeavored to make slight modifications to the ROVE system to assuage the issues between it and the OV GTFS data. This was my first project in Python, and it was a great introduction to Pythonic development and debugging.</p>
                 <a class="project-link", id="rove-repo" href="https://github.com/marcusaroldan/rove" target="_blank">GitHub Repository</a>
             </div>
-            <div class="mini-project-section", id="ai-chord-prediction">
+            <div class="interactive-mini-project-section", id="ai-chord-prediction">
                 <h2>Chord Recognition and Progression Predictor</h2>
                 <img class="project-image", id="ai-img", src="media/chromagram.PNG", alt="Sample chromogram of a testing song.">
                 <p class="project-description", id="ai-desc">Using an ensemble approach for chord recognition followed by a Hidden Markov Model for chord prediction, this project applies key AI concepts to music and sound data to create an entertaining model to interpret and predict chord progressions.</p>
