--- a/projects-interactive.html
+++ b/projects-interactive.html
@@ -17,6 +17,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="projects-interactive.html">Interactive Projects Map</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="https://github.com/marcusaroldan/" target="_blank">GitHub</a></li>
