added a new link to access the nlp paper

--- a/projects-interactive.html
+++ b/projects-interactive.html
@@ -41,6 +41,7 @@
             <p class="project-description" id="311-desc">The project repository contains JuPyter notebook files which collect the raw data from the Boston 311 API, classify the data, then process it for visualization, with the rest of the repository dedicated to the visualization of the data.</p>
             <a class="project-link", id="311-site" href="https://marcusaroldan.github.io/311-infrastructure-issue-identifier/" target="_blank">Interactive Map</a>
             <a class="project-link", id="311-repo" href="https://github.com/marcusaroldan/311-infrastructure-issue-identifier" target="_blank">GitHub Repository</a>
+            <a class="project-link", id="311-paper" href="nlpreport.html">Read about the Lbl2Vec Strategy</a>
         </div>
         <div class="interactive-project-section", id="bicre">
             <h2>BICRE: Boston Integrated Cycle Route Engine</h2>
