added contact info to home page

--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
     </div>
 
     <div class="section" id="contact-info">
+        <h2>Contact Info:</h2>
+        <ul>
+            <li>School Email: <a href="mailto: roldan.m@northeastern.edu">roldan.m@northeastern.edu</a></li>
+            <li>Personal Email: <a href="mailto: marcusaroldan@gmail.com">marcusaroldan@gmail.com</a></li>
+            <li>Cell Phone: (973) 229-3445</li>
+            <li>GitHub: <a href="https://github.com/marcusaroldan/" target="_blank">@marcusaroldan</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/marcusaroldan/" target="_blank">@marcusaroldan</a></li>
+        </ul>
     </div>
 </body>
