added more content to Northeastern and Wishroute sections

--- a/index.html
+++ b/index.html
@@ -48,11 +48,27 @@
             <h2>Northeastern:</h2>
             <p>At Northeastern, I have had the pleasure of learning and experiencing many aspects of Technology, Computer Science, Software Development, Data Science, and many other interesting topics.</p>
             <p>One constant throughout my studies has been the massive impact technology already has on our lives, and the trend of its increasing role in our day-to-day happenings. With this in mind, it is imperative that as we forge the path forward, we recognize the stakes and potential collateral damage new technologies can have. A strong ethical foundation is key to responsible technological development. As we progress our technological capabilities, we must ensure both direct and indirect positive impacts.</p>
+            
+            <h3>Highlights and Key Courses:</h3>
+            <ul>
+                <li><strong>GPA: 3.444</strong> | Dean's List</li>
+                <li><em>B.S. in Computer Science</em>, concentration in Artificial Intelligence, minor in Spanish Language</li>
+                <li>CS Fundamentals Courses: Discrete Structures, Mathematical Reasoning, Object-Oriented Design, Algorithms, Computer Systems, Data Modeling, Software Development, Theory of Computation, Cybersecurity, Law and Ethics of Digital Tech</li>
+                <li>AI Courses: Artificial Intelligence, Natural Language Processing, Machine Learning and Data Mining, Information Retrieval, Information Visualization</li>
+                <li>Other notable courses: Advanced Spanish I & II, Language & Linguistics, Spanish Linguistics, Authentic Spanish Grammar, Sustainable Transportation and Urban Development, Astronomy</li>
+            </ul>
         </div>
 
         <div class="map-section" id="wishroute">
             <h2>Wishroute:</h2>
             <p>During my co-op as a Software Engineer at Wishroute, Inc., I gained highly valuable technical experience and knowledge, as well as a better understanding of the importance of having a tangible, positive impact through my work, enabling the mission of the company "...to bring human connection and engagement to our digital world".</p>
+            <p>Specifically, I worked with the Technical team to support infrastructure changes which increased the customizability and user interaction our partners were able to achieve through our system. At the same time, I worked with the Operations team to set up internal data infrastructure to both monitor KPIs, as well as highlight user impact stories to demonstrate the impact Wishroute's many partnerships were having on users' experiences.</p>
+            <p>It was through these projects that I witnessed the importance of a tangible, positive impact through my work. Seeing how the projects and implementations I had worked on for many weeks improved the lives of Wishroute and our partners' users added motivation, pride, and provided the extra spark needed when implentation challenges became frustrating.</p>
+            <h3>Technical Aspects:</h3>
+            <ul>
+                <li>AWS: DynamoDB, Step Functions, Lambda, CodeArtifact, CodeCommit, CLI, S3 Buckets</li>
+                <li>Languages and Systems: Java (Object-Oriented and Functional), SQL, Postgres, Metabase</li>
+            </ul>
         </div>
 
         <div class="map-section" id="transportation">
