--- a/aipaper.html
+++ b/aipaper.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+
+    <link href="media/favicon.ico" type="image/x-icon" rel="icon" />
 </head>
 
 <body>
